<resources>
    <string name="app_name">Sekretariat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_help">Help</string>

    <string name="menu_load">Load Data</string>
    <string name="menu_home">Students</string>
    <string name="menu_gallery">Teachers</string>
    <string name="menu_slideshow">Employees</string>
    <string name="data_missing_error">Data Not Found</string>
    <string name="load_data_button_error">Load Data</string>
    <string name="value">value</string>
    <string name="op">op</string>>
    <string name="dismiss">Dismiss</string>

    <string name="toast_error_no_table">Please Select A Table</string>
    <string name="toast_error_no_data">Selected Table Result Is Empty</string>
    <string name="toast_error_no_database">Database Not Selected</string>
    <string name="toast_error_no_database_existence">No Valid Data In Specified Location</string>
    <string name="toast_message_database_existence">Data Successfully Gathered</string>
    <string name="toast_error_wrong_extension">Sekretariat Only Supports .xml &amp; .csv Files</string>
    <string name="toast_error_no_operand">Invalid Operand</string>

    <string name="help_line1">Firstly Insert Data Location</string>
    <string name="help_line2a">Press </string>
    <string name="help_line2b">Icon To Filter Result</string>
    <string name="help_line3a">Select Column Insert Operand</string>
    <string name="help_line3b">=, &lt;&gt;, &lt;, &gt;, &gt;=, &lt;=</string>
    <string name="help_line4">Scroll Up To Refresh</string>
    <string name="search">Search</string>
</resources>