<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <ImageView
        android:id="@+id/dismiss_help_dialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:contentDescription="@string/dismiss"
        app:layout_constraintStart_toEndOf="@+id/help_textView2b"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/help_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help_textView2a"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/help_line2a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_textView1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/search"
        app:tint="@color/black"
        app:layout_constraintStart_toEndOf="@id/help_textView2a"
        app:layout_constraintTop_toBottomOf="@id/help_textView1"
        app:srcCompat="@drawable/ic_baseline_search_24" />

    <TextView
        android:id="@+id/help_textView2b"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:text="@string/help_line2b"
        app:layout_constraintStart_toEndOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/help_textView1" />

    <TextView
        android:id="@+id/help_textView3a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_line3a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <TextView
        android:id="@+id/help_textView3b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_line3b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_textView3a" />

    <TextView
        android:id="@+id/help_textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_line4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_textView3b" />
</androidx.constraintlayout.widget.ConstraintLayout>